ingress-harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  # Pass through HTTPS to backend
    nginx.ingress.kubernetes.io/ssl-redirect: "false"      # Do not redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: harbor.cks-controller  # Replace with your desired IP or domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 8443
